Updated index file paths

--- a/app/general/templates/general/index.html
+++ b/app/general/templates/general/index.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/general/index.css') }}">
 </head>
+<html>
+<body>
     <!-- Hero Section -->
     <section id="hero-section">
         
@@ -36,8 +38,10 @@
                 
                 <!-- Second Card -->
                 <div id="big-card">
-                    <div id="big-card-image-container">
-                        
+                    <div id="big-card-image-container"></div>
+                    <div id="big-card-text-section">
+                        <h2 class="small-card-header">What Do We Offer?</h1>
+                        <p class="small-card-text">Current Exhibits, Animals</p>
                     </div>
                 </div>
 
