--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/header.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/components/header.css') }}">
 </head>
 <body>
     <div id="header-container">
         <header id="header">
             <!-- Logo Section -->
             <section id="logo-section">
-                <img id="logo" src="{{url_for('static', filename='images/logos/light-logo.png')}}" alt="Site logo">
+                <a href="/">
+                    <img id="logo" src="{{url_for('static', filename='images/logos/light-logo.png')}}" alt="Site logo">
+                </a>
             </section>
 
             <!-- Links Section -->
             <section id="links-section">
                 <ul id="link-list">
                     <li class="link-container"><a class='link' href="">About Us</a></li>
-                    <li class="link-container"><a class='link' href="">Booking</a></li>
+                    <li class="link-container"><a class='link' href="/booking">Booking</a></li>
                     <li class="link-container"><a class='link' href="">Games</a></li>
                     <li class="link-container"><a class='link' href="">Education</a></li>
                 </ul>
@@ -34,7 +36,7 @@
                 </button>
 
                 <button class="button-trans" id="access-button">
-                    <img id="acc-img" src="{{ url_for('static', filename='images/logo/accessibility.png') }}" alt="">
+                    <img id="acc-img" src="{{ url_for('static', filename='images/logos/accessibility.png') }}" alt="">
                 </button>
 
             </section>
