Main booking page

--- a/app/booking/templates/booking/booking.html
+++ b/app/booking/templates/booking/booking.html
@@ -8,13 +8,21 @@
 <body>
     <main id="wrapper">
         <div id="booking-container">
-            <section class="booking-section">
-                
+            <section class="booking-section" id="hotel-section">
+                <div class="booking-text-container">
+                    <h1 class="booking-header">Check Hotel Availability!</h1>
+                    <button class="booking-button">Book Now!</button>
+                </div>
+                <div class="image-container" id="hotel-image"></div>
             </section>
 
-            <section class="booking-section">
-                
-            </section>
+            <section class="booking-section" id="zoo-section">
+                 <div class="booking-text-container">
+                    <h1 class="booking-header">Book Zoo Tickets!</h1>
+                    <button class="booking-button">Book Now!</button>
+                </div>
+                <div class="image-container" id="zoo-image"></div>
+            </section> 
         </div>
     </main>
 </body>
