UPDATE - I forgot most

--- a/app/general/templates/booking.html
+++ b/app/general/templates/booking.html
@@ -11,7 +11,7 @@
             <section class="booking-section" id="hotel-section">
                 <div class="booking-text-container">
                     <h1 class="booking-header">Check Hotel Availability!</h1>
-                    <button class="booking-button">Book Now!</button>
+                    <a id="button-link" href="/hotel"><button class="booking-button">Book Now!</button></a>
                 </div>
                 <div class="image-container" id="hotel-image"></div>
             </section>
@@ -19,8 +19,7 @@
             <section class="booking-section" id="zoo-section">
                  <div class="booking-text-container">
                     <h1 class="booking-header">Book Zoo Tickets!</h1>
-                    <button class="booking-button">Book Now!</button>
-                </div>
+                    <a id="button-link" href="/zoo"><button class="booking-button">Book Now!</button></a>                </div>
                 <div class="image-container" id="zoo-image"></div>
             </section> 
         </div>
