--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -1,46 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/components/header.css') }}">
-</head>
-<body>
-    <div id="header-container">
-        <header id="header">
-            <!-- Logo Section -->
-            <section id="logo-section">
-                <a href="/">
-                    <img id="logo" src="{{url_for('static', filename='images/logos/light-logo.png')}}" alt="Site logo">
-                </a>
-            </section>
+<header class="site-header">
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/components/header.css') }}">
+    </head>
+    <body>
+        <div id="header-container">
+            <header id="header">
+                <!-- Logo Section -->
+                <section id="logo-section">
+                    <a href="/">
+                        <img id="logo" src="{{url_for('static', filename='images/logos/light-logo.png')}}" alt="Site logo">
+                    </a>
+                </section>
 
-            <!-- Links Section -->
-            <section id="links-section">
-                <ul id="link-list">
-                    <li class="link-container"><a class='link' href="">About Us</a></li>
-                    <li class="link-container"><a class='link' href="/booking">Booking</a></li>
-                    <li class="link-container"><a class='link' href="">Games</a></li>
-                    <li class="link-container"><a class='link' href="">Education</a></li>
-                </ul>
-            </section>
+                <!-- Links Section -->
+                <section id="links-section">
+                    <ul id="link-list">
+                        <li class="link-container"><a class='link' href="/#about-section">About Us</a></li>
+                        <li class="link-container"><a class='link' href="/booking">Booking</a></li>
+                        <li class="link-container"><a class='link' href="">Games</a></li>
+                        <li class="link-container"><a class='link' href="">Education</a></li>
+                    </ul>
+                </section>
 
-            <!-- Auth Section -->
-            <section id="auth-section">
-                <button class="auth-button button-trans">
-                    Sign In
-                </button>
+                <!-- Auth Section -->
+                <section id="auth-section">
+                    <button class="auth-button button-trans">
+                        Sign In
+                    </button>
 
-                <button class="auth-button button-trans">
-                    Register
-                </button>
+                    <button class="auth-button button-trans">
+                        Register
+                    </button>
 
-                <button class="button-trans" id="access-button">
-                    <img id="acc-img" src="{{ url_for('static', filename='images/logos/accessibility.png') }}" alt="">
-                </button>
+                    <button class="button-trans" id="access-button">
+                        <img id="acc-img" src="{{ url_for('static', filename='images/logos/accessibility.png') }}" alt="">
+                    </button>
 
-            </section>
-        </header>
-    </div>
-</body>
-</html>
+                </section>
+            </header>
+        </div>
+    </body>
+    </html>
+</header>
