--- a/app/static/styles/components/header.css
+++ b/app/static/styles/components/header.css
@@ -18,9 +18,11 @@ body{
     display: flex;
     background: #414833;
     border-radius: 25px;
-    width: 1800px;
+    width: 75vw;
     height: 100px;
     outline: 3px;
+
+    box-shadow: 7px 7px 12px #2c2c2ce1;
 }
 
 
@@ -36,9 +38,10 @@ body{
 }
 
 
-#logo{
-    width: 115px;
+.site-header #logo{
+    width: 100px;
     transition: filter 0.15s ease, transform 0.15s ease;
+    padding-top: 5%;
 }
 
 #logo:hover{
@@ -47,7 +50,7 @@ body{
 
 
 #links-section{
-    width: 1000px;
+    width: 70%;
     margin-right: auto;
     margin-left: auto;
 }
@@ -63,27 +66,29 @@ body{
 .link-container{
     display: flex;
     list-style-type: none;
-    width: 200px;
+    width: 100%;
     height: 100%;
     align-items: center;
     justify-content: start;
 }
 
 
-.link{
+.site-header .link{
     display: flex;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.5rem;
     font-family: sans-serif;
     color: white;
     font-weight: bold;
-    width: 150px;
+    width: 80%;
+    height: 35%;
     border-top-style: solid;
     border-bottom-style: solid;
     border-width: 3px;
     padding-top: 10px;
     padding-bottom: 10px;
     justify-content: center;
+    align-items: center;
 }
 
 .link:hover{
