--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -28,18 +28,19 @@
 
                 <!-- Auth Section -->
                 <section id="auth-section">
-                    <button class="auth-button button-trans">
-                        Sign In
-                    </button>
+                    <div id="auth-buttons-section">
+                        <button class="auth-button button-trans">
+                            Sign In
+                        </button>
 
-                    <button class="auth-button button-trans">
-                        Register
-                    </button>
+                        <button class="auth-button button-trans">
+                            Register
+                        </button>
+                    </div>
 
                     <button class="button-trans" id="access-button">
                         <img id="acc-img" src="{{ url_for('static', filename='images/logos/accessibility.png') }}" alt="">
                     </button>
-
                 </section>
             </header>
         </div>
