--- a/app/static/styles/components/header.css
+++ b/app/static/styles/components/header.css
@@ -18,7 +18,8 @@ body{
     display: flex;
     background: #414833;
     border-radius: 25px;
-    width: 75vw;
+    width: 75%;
+    min-width: 1000px;
     height: 100px;
     outline: 3px;
 
@@ -28,8 +29,8 @@ body{
 
 #logo-section{
     display: flex;
-    height: 100px;
-    width: 250px;
+    height: 100%;
+    width: 15%;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
     justify-content: start;
@@ -50,7 +51,7 @@ body{
 
 
 #links-section{
-    width: 70%;
+    width: 50%;
     margin-right: auto;
     margin-left: auto;
 }
@@ -60,6 +61,7 @@ body{
     display: flex;
     height: 100%;
     margin: 0;
+    padding: 0;
 }
 
 
@@ -106,16 +108,25 @@ body{
 
 #auth-section{
     display: flex;
-    width: 400px;
+    flex: 1;
     justify-content: center;
     align-items: center;
     margin-left: auto;
 }
 
+#auth-buttons-section{
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+    justify-content: center;
+    align-items: center;
+}
+
 
 .auth-button{
-    width: 160px;
-    height: 60px;
+    width: 40%;
+    height: 50%;
     margin: 5px;
     border-radius: 10px;
     border: none;
