--- a/app/static/styles/components/header.css
+++ b/app/static/styles/components/header.css
@@ -117,6 +117,7 @@ body{
 #auth-buttons-section{
     display: flex;
     width: 100%;
+    max-width: 400px;
     height: 100%;
 
     justify-content: center;
